fixed desktop tiles overflow

--- a/src/components/Templates/ThreeTile/Tile/Tile.scss
+++ b/src/components/Templates/ThreeTile/Tile/Tile.scss
@@ -12,6 +12,7 @@
     height: 100%;
     width: 100%;
     padding: 1rem;
+    overflow: scroll;
   }
 
   h4 {
